# vivacapi-core

./: .dockerignore  .env.example  .gitignore  .worktreeinclude  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docs  example.env  pyproject.toml
.claude/rules/: api-conventions.md  code-style.md  security.md  testing.md
.github/: release.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0dd988c6b130_initial_schema_with_shortuuid.py  0efcde5399a3_add_cascade_delete_and_unique_.py  1c2f1b92a707_create_jobs_table.py  2cd14aeebc1d_add_spot_category_options_table.py  3eb2b585b548_add_invites_and_user_referred_by.py  3faa9de7cf2a_add_spots_last_verified_at.py  610d81c68705_generalize_spot_category_options_to_.py  62795cd8d6c0_add_source_and_external_id_to_spots.py  73dcae10bc10_add_spot_groups_tables.py  78017752a05e_add_is_staff_to_users.py  a1b2c3d4e5f6_add_spot_images.py  b3d8f2a4c6e1_add_user_staff_role.py  (+8 more)
app/: main.py
docs/: architecture.md  backlog.md  business-feature-roadmap-2026-07-20.md  db-security-review-2026-05-02.md  erd.md  test-setup.md
infra/: docker-compose.yml
scripts/: decay_trust_tier.py  export_openapi.py  upload_spots_local.py
tests/: conftest.py  helpers.py  test_admin_auth_backend.py  test_admin_auth_router.py  test_audit_history.py  test_auth_router.py  test_cors.py  test_errors.py  test_explore_router.py  test_health.py  test_internal_categories.py  test_internal_jobs.py  test_internal_review_reports_router.py  test_internal_spot_business_info_bulk.py  test_internal_spot_business_info_crud.py  test_internal_spot_groups.py  test_internal_spot_options.py  test_internal_spots_bulk.py  test_internal_spots_crud.py  test_internal_spots_delete.py  test_invites_router.py  test_job_worker.py  test_require_staff.py  test_spot_bulk_schema.py  test_spot_groups.py  test_spot_images.py  test_spot_reviews_crud.py  test_spot_reviews_router.py  test_spot_search_crud.py  test_spot_trust_tier_decay.py  test_uid_constraint.py  test_user_crud.py
vivacapi/: main.py
(+130 files in other folders)
