[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"

[project]
name = "vivac-api"
dynamic = ["version"]
description = "VIVAC API - 캠퍼를 위한 장소 큐레이션 서비스"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "google-auth>=2.36.0",
    "requests>=2.32.0",
    "PyJWT>=2.9.0",
    "shortuuid>=1.0.13",
    "sqladmin>=0.27.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "coverage>=7.14.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["alembic/versions"]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
